# zero2prod

./: Cargo.toml
scripts/: connect_db.sh  init_db.sh  init_db2.sh
src/: configuration.rs  main.rs
tests/: health_check.rs
